terraform/azure_modules/virtual_network/network_security_rule_alb.tf
resource "azurerm_network_security_rule" "alb_allow_outbound" {
  name                        = "AllowOutboundInternet"
  priority                    = 300
  direction                   = "Outbound"
  access                      = "Allow"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.resource_group_name
  network_security_group_name = azurerm_network_security_group.alb_security_group.name
}
