terraform/azure_modules/virtual_network/subnets.tf
resource "azurerm_subnet" "vm_subnet" {
  name = "${var.env}VmSubnet"
  resource_group_name = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.virtual_network.name
  address_prefixes     = ["10.0.1.0/24"]
}


resource "azurerm_subnet" "aks_subnet" {
  name                 = "${var.env}AksSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.virtual_network.name
  address_prefixes     = ["10.0.2.0/24"]
}


resource "azurerm_subnet" "db_subnet" {
  name                 = "${var.env}DbSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.virtual_network.name
  address_prefixes     = ["10.0.3.0/24"]
  private_endpoint_network_policies = "Disabled"
  delegation {
    name = "dbFlexibleServerDelegation"

    service_delegation {
      name = "Microsoft.DBforPostgreSQL/flexibleServers"
      actions = [
        "Microsoft.Network/virtualNetworks/subnets/action",
      ]
    }
  }
}

resource "azurerm_subnet" "alb_subnet" {
  name                 = "${var.env}Albsubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.virtual_network.name
  address_prefixes     = ["10.0.4.0/24"]  # make sure this doesn't overlap existing subnets

  delegation {
    name = "alb-delegation"
    service_delegation {
      name    = "Microsoft.ServiceNetworking/trafficControllers"
      actions = ["Microsoft.Network/virtualNetworks/subnets/join/action"]
    }
  }
}
